# testingrepo

./: .gitignore  pyproject.toml
my_module/: __main__.py
