[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "testing"

##
# Build tool specific
##
[tool.hatch.build.targets.wheel]
packages = [
    "/my_module", "/frontend"
]
# In the wheel we do not need the frontend sources. We provide the dist.
exclude = [
    "/frontend"
]
# these folders are (partially) in gitignore and would otherwise not be part of the builds
artifacts = [
    "/frontend/dist",
]
